[gd_scene load_steps=3 format=2]

[ext_resource path="res://Network_Setup.gd" type="Script" id=1]
[ext_resource path="res://But_ChangeScene.gd" type="Script" id=2]

[node name="Network_Setup" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Multiplayer_Configure" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Create_Server" type="Button" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = 21.0
margin_right = 125.0
margin_bottom = 121.0
text = "Create Server"
script = ExtResource( 2 )
next_scene_path = "res://Room_Creation.tscn"

[node name="Join_Server" type="Button" parent="Multiplayer_Configure"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -125.0
margin_top = -129.0
margin_right = 125.0
margin_bottom = -29.0
text = "Join Server"
script = ExtResource( 2 )

[node name="Server_IP_Address" type="LineEdit" parent="Multiplayer_Configure"]
margin_left = 389.0
margin_top = 82.0
margin_right = 639.0
margin_bottom = 132.0
text = "Enter IP Address"
align = 1

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Device_IP_Address" type="Label" parent="CanvasLayer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -1.0
margin_top = -76.0
margin_right = -1.0
margin_bottom = -26.0
align = 1
valign = 1

[connection signal="button_up" from="Multiplayer_Configure/Create_Server" to="Multiplayer_Configure/Create_Server" method="_on_But_NewGame_button_up"]
